--- a/scenarios/01_A_New_Chance.cfg
+++ b/scenarios/01_A_New_Chance.cfg
@@ -7,12 +7,12 @@
     name= _ "A New Chance"
     next_scenario=02_Brother_Against_Brother
     map_file=01_A_New_Chance.map
-    {TURNS 30 27 24}
+    {TURNS 30 28 26}
     {DEFAULT_SCHEDULE_DUSK}
 
-    {INTRO_AND_SCENARIO_MUSIC underground.ogg knolls.ogg}
+    {INTRO_AND_SCENARIO_MUSIC underground.ogg revelation.ogg}
     {EXTRA_SCENARIO_MUSIC gameplay06.ogg}
-    {EXTRA_SCENARIO_MUSIC transience.ogg}
+    {EXTRA_SCENARIO_MUSIC into_the_shadows.ogg}
 
     [event]
         name=prestart
@@ -74,20 +74,24 @@
             leader_value=2
         [/ai]
 
-        recruit=Troll Whelp
+        recruit=Young Ogre,Troll Whelp
         {GOLD 4 6 8}
-        {INCOME 0 2 4}
+        {INCOME 4 6 8}
         user_team_name= _ "team_name^Monsters"
         facing=ne
         {FLAG_VARIANT6 ragged}
 
-        {GENERIC_GUARD_UNIT 2 (Ogre) 8 8}
-        {GENERIC_GUARD_UNIT 2 (Troll Whelp) 5 13}
+        {LOYAL_GUARD_UNIT 2 (Ogre) 8 8}
+        {LOYAL_GUARD_UNIT 2 (Troll Whelp) 5 13}
 
-        {GENERIC_GUARD_UNIT 2 (Walking Corpse) 28 18}
-        {GENERIC_GUARD_UNIT 2 (Walking Corpse) 28 19}
-
-        {GENERIC_GUARD_UNIT 2 (Naga Fighter) 34 6}
+#ifdef HARD
+        {LOYAL_GUARD_UNIT 2 (Soulless) 28 18}
+        {LOYAL_GUARD_UNIT 2 (Soulless) 28 19}
+#else
+        {LOYAL_GUARD_UNIT 2 (Walking Corpse) 28 18}
+        {LOYAL_GUARD_UNIT 2 (Walking Corpse) 28 19}
+#endif
+        {LOYAL_GUARD_UNIT 2 (Naga Fighter) 34 6}
 
         [unit]
             type=Troll
@@ -96,6 +100,7 @@
             x,y=34,17
             random_traits=yes
             ai_special=guardian
+            upkeep=loyal
         [/unit]
         [unit]
             type=Young Ogre
@@ -104,15 +109,39 @@
             x,y=25,8
             random_traits=yes
             ai_special=guardian
+            upkeep=loyal
         [/unit]
     [/side]
+
+    {CONTINUOUS_SOUND_SOURCE campfire 18 7 (ambient/campfire.ogg)}
+    {SOUND_SOURCE_RANGE 2 10}
 
     [event]
         name=start
         [message]
+            speaker="Gwiti Ha'atel"
+            message= _ "My whole body still aches... Where the hell is this strange beach?"
+        [/message]
+        [message]
             speaker=narrator
-            message= _ "After his banishment from Wesnoth for practicing necromancy, the young Gwiti Ha’atel arrived on a strange shore. He decided to claim it for his own."
+            message= _ "The area was blighted. Not one human being was there."
             image=wesnoth-icon.png
+        [/message]
+
+        [animate_unit]
+            [filter]
+                id="Gwiti Ha'atel"
+            [/filter]
+            flag=attack
+            hits=yes
+            [primary_attack]
+                range=ranged
+            [/primary_attack]
+        [/animate_unit]
+
+        [message]
+            speaker="Gwiti Ha'atel"
+            message= _ "Apparently the dark gods have not yet completely abandoned me. The smell of the beast is in the air around here — perhaps they are the material for testing whether I shall survive. Conveniently for me, this ruin is piled high with corpses."
         [/message]
     [/event]
 
@@ -204,13 +233,37 @@
         [/message]
         [message]
             speaker="Arkal-Thil"
-            message= _ "I understood. Master!"
+            message= _ "I understood. My brethren shall also join you."
+        [/message]
+        [message]
+            speaker=narrator
+            message= _ "You can now recruit dark adepts and vampire bats."
+            image=wesnoth-icon.png
         [/message]
 
         [allow_recruit]
             side=1
             type=Vampire Bat,Dark Adept
         [/allow_recruit]
+    [/event]
+
+    [event]
+        name=last breath
+        [filter]
+            id="Arkal-Thil"
+        [/filter]
+        [message]
+            speaker=unit
+            message= _ "Am I doomed to die this way?"
+        [/message]
+        [message]
+            speaker="Gwiti Ha'atel"
+            message= _ "The servants you have provided shall serve me forever. And you, too..."
+        [/message]
+        [message]
+            speaker="Arkal-Thil"
+            message= _ "Ugh... This is nightmare..."
+        [/message]
     [/event]
 
     [event]
