--- a/scenarios/02_Brother_Against_Brother.cfg
+++ b/scenarios/02_Brother_Against_Brother.cfg
@@ -173,6 +173,11 @@
 
     [event]
         name=last breath
+        [filter]
+            [not]
+                race=undead
+            [/not]
+        [/filter]
         [filter_second]
             id="Gwiti Ha'atel"
         [/filter_second]
@@ -183,6 +188,11 @@
     [/event]
     [event]
         name=last breath
+        [filter]
+            [not]
+                race=undead
+            [/not]
+        [/filter]
         [filter_second]
             id="Nati Ha'atel"
         [/filter_second]
@@ -196,6 +206,11 @@
         [filter]
             id="Gwiti Ha'atel"
         [/filter]
+        [filter_second]
+            [not]
+                race=undead
+            [/not]
+        [/filter_second]
         [message]
             speaker="Gwiti Ha'atel"
             message= _ "I am Gwiti the Mighty, prepare to die!"
@@ -206,6 +221,11 @@
         [filter]
             id="Nati Ha'atel"
         [/filter]
+        [filter_second]
+            [not]
+                race=undead
+            [/not]
+        [/filter_second]
         [message]
             speaker="Nati Ha'atel"
             message= _ "Now you shall die!"
