--- a/scenarios/11_An_Orcish_Coup.cfg
+++ b/scenarios/11_An_Orcish_Coup.cfg
@@ -152,6 +152,15 @@
         {FLAG_VARIANT6 ragged}
     [/side]
 
+    {CONTINUOUS_SOUND_SOURCE campfire3 27 8 (ambient/campfire.ogg)}
+    {SOUND_SOURCE_RANGE 2 10}
+
+    {CONTINUOUS_SOUND_SOURCE campfire4 34 16 (ambient/campfire.ogg)}
+    {SOUND_SOURCE_RANGE 2 10}
+
+    {CONTINUOUS_SOUND_SOURCE campfire5 8 11 (ambient/campfire.ogg)}
+    {SOUND_SOURCE_RANGE 2 10}
+
     [event]
         name=prestart
         {VARIABLE chieftain_bodycount 0}
