--- a/mainline-strings.cfg
+++ b/mainline-strings.cfg
@@ -21,6 +21,12 @@ _ "chill tempest" #enddef
 #define STR_CHILL_WAVE
 _ "chill wave" #enddef
 
+#define STR_ENSNARE
+_ "ensnare" #enddef
+
+#define STR_FAERIE_FIRE
+_ "faerie fire" #enddef
+
 #define STR_SHADOW_WAVE
 _ "shadow wave" #enddef
 
