--- a/scenarios/11_An_Orcish_Coup.cfg
+++ b/scenarios/11_An_Orcish_Coup.cfg
@@ -414,7 +414,7 @@ Enemy units can only see this unit during the day, or if they have units next to
                 [objectives]
                     [objective]
                         condition=win
-                        description= _ "Turns run out"
+                        description= _ "Survive until the turns run out"
                     [/objective]
 
                     {ALTERNATIVE_OBJECTIVE_BONUS ( _ "Kill the last orcish leader")}
