--- a/scenarios/13_Landfall.cfg
+++ b/scenarios/13_Landfall.cfg
@@ -69,7 +69,16 @@
         [ai]
             aggression=1.0
             caution=0.2
+            grouping=offensive
             leader_value=0
+
+            [goal]
+                name=target
+                [criteria]
+                    id="Gwiti Ha'atel"
+                [/criteria]
+                value=4.0
+            [/goal]
         [/ai]
 
         recruit=Swordsman,Pikeman,Master Bowman,Shock Trooper,Duelist
@@ -96,6 +105,7 @@
         [ai]
             aggression=1.0
             caution=0.2
+            grouping=offensive
             leader_value=0
         [/ai]
 
@@ -123,6 +133,7 @@
         [ai]
             aggression=1.0
             caution=0.2
+            grouping=offensive
             leader_value=0
         [/ai]
 
@@ -307,6 +318,8 @@
             speaker="Gwiti Ha'atel"
             message= _ "I certainly remember that I killed some of those fishes in the time between to get here. Did they come to dare me for that? I shall roast all those foolish fishes with salt!"
         [/message]
+
+        {APPEND_MUSIC loyalists.ogg}
 
         [objectives]
             [objective]
