--- a/about.cfg
+++ b/about.cfg
@@ -30,9 +30,12 @@
 [about]
     title= _ "Graphics"
     [entry]
-        name="Orcish Shyde"
+        name="Iris Morelle (Irydacea/shadowm)"
     [/entry]
     [entry]
         name="KameRamen"
+    [/entry]
+    [entry]
+        name="Orcish Shyde"
     [/entry]
 [/about]
