--- a/scenarios/14_Ambush.cfg
+++ b/scenarios/14_Ambush.cfg
@@ -5,10 +5,10 @@
     name= _ "Ambush"
     next_scenario=15_The_Crown_Prince
     map_file=14_Ambush.map
-    {TURNS 28 26 24}
+    {TURNS 30 28 26}
     {DEFAULT_SCHEDULE_DAWN}
 
-    {INTRO_AND_SCENARIO_MUSIC battle-epic.ogg revelation.ogg}
+    {INTRO_AND_SCENARIO_MUSIC battle.ogg revelation.ogg}
     {EXTRA_SCENARIO_MUSIC journeys_end.ogg}
     {EXTRA_SCENARIO_MUSIC elvish-theme.ogg}
 
@@ -36,8 +36,12 @@
     {STORYTXT_AMBUSH}
     {TDH_TRACK {JOURNEY_14_NEW}}
 
-    {STARTING_VILLAGES 1 4}
-    {STARTING_VILLAGES 2 10}
+    {STARTING_VILLAGES_ALL 2}
+    {STARTING_VILLAGES 3 7}
+    {STARTING_VILLAGES 4 4}
+    {STARTING_VILLAGES 1 3}
+
+    {PLACE_IMAGE scenery/signpost.png 22 18}
 
     [side]
         type=Demilich
@@ -48,29 +52,28 @@
         canrecruit=yes
         controller=human
         {GOLD 140 120 100}
-        {INCOME 4 2 0}
+        {INCOME 6 4 2}
+        team_name=undead
         user_team_name= _ "team_name^Gwiti"
-        facing=ne
+        facing=se
         {FLAG_VARIANT undead}
     [/side]
 
     [side]
-        type=Elvish Enchantress
+        type=Sylvan Warden
         id=Elynia
         name= _ "Elynia"
-        profile=portraits/elynia.png
         side=2
         canrecruit=yes
 
         [ai]
             aggression=1.0
-            caution=0.0
-            leader_value=2
+            caution=0.2
         [/ai]
 
-        recruit=Elvish Fighter,Elvish Hero,Elvish Archer,Elvish Ranger,Elvish Shaman,Elvish Druid,Elvish Sorceress
-        {GOLD 240 300 360}
-        {INCOME 10 20 30}
+        recruit=Elvish Fighter,Elvish Hero,Elvish Archer,Elvish Ranger,Elvish Scout,Elvish Shaman,Elvish Druid,Elvish Sorceress
+        {GOLD 200 250 300}
+        {INCOME 20 25 30}
         team_name=elves
         user_team_name= _ "team_name^Elynia"
         facing=sw
@@ -78,7 +81,7 @@
     [/side]
 
     [side]
-        type=Elvish Shyde
+        type=Elvish Enchantress
         id=Legondra
         name= _ "Legondra"
         side=3
@@ -86,23 +89,46 @@
 
         [ai]
             aggression=1.0
-            caution=-0.2
-            leader_value=2
+            caution=0.2
+        [/ai]
+
+        recruit=Elvish Fighter,Elvish Hero,Elvish Archer,Elvish Ranger,Elvish Scout,Elvish Shaman,Elvish Druid,Elvish Sorceress
+        {GOLD 150 200 250}
+        {INCOME 15 20 25}
+        team_name=elves
+        user_team_name= _ "team_name^Elynia"
+        facing=sw
+        {FLAG_VARIANT wood-elvish}
+    [/side]
+
+    [side]
+        type=Elvish High Lord
+        id=Isarandel
+        name= _ "Isarandel"
+        profile=portraits/elves/lord.webp
+        side=4
+        canrecruit=yes
+
+        [ai]
+            aggression=1.0
+            caution=0.0
+            grouping=no
+
             [goal]
-                name=protect_unit
+                name=target
                 [criteria]
-                    id=Elynia
+                    id="Gwiti Ha'atel"
                 [/criteria]
-                value=9.0
+                value=4.0
             [/goal]
         [/ai]
 
-        recruit=Elvish Fighter,Elvish Hero,Elvish Archer,Elvish Ranger,Elvish Shaman,Elvish Druid,Elvish Sorceress
-        {GOLD 160 200 240}
-        {INCOME 10 20 30}
+        recruit=Elvish Fighter,Elvish Hero,Elvish Archer,Elvish Ranger,Elvish Scout,Elvish Shaman,Elvish Druid,Elvish Sorceress
+        {GOLD 150 200 250}
+        {INCOME 20 25 30}
         team_name=elves
         user_team_name= _ "team_name^Elynia"
-        facing=se
+        facing=nw
         {FLAG_VARIANT wood-elvish}
     [/side]
 
@@ -127,6 +153,22 @@
         [message]
             speaker="Gwiti Ha'atel"
             message= _ "Elynia? I cannot believe it. I have heard that name before. So, you are the elf mentioned in the lore who slayed Mizenwyn?"
+        [/message]
+    [/event]
+
+    [event]
+        name=side 3 turn 1
+        [message]
+            speaker=Legondra
+            message= _ "Proceed to ensure the victory of Lady Elynia!"
+        [/message]
+    [/event]
+
+    [event]
+        name=side 4 turn 1
+        [message]
+            speaker=Isarandel
+            message= _ "Necromancer, your journey ends here! Prepare to perish!"
         [/message]
     [/event]
 
@@ -175,13 +217,15 @@
         [/filter]
         [message]
             speaker=unit
-            message= _ "Ugh!"
+            message= _ "Ugh... I..."
         [/message]
         [message]
             speaker="Gwiti Ha'atel"
             message= _ "I shall show some mercy to a wretched being like you. You are mortally wounded and going to die. But you will not join my army. You will return to the earth forever, as you elves foolishly hope."
             scroll=no
         [/message]
+
+        {FLASH_RED ()}
 
         [kill]
             id=Elynia
@@ -191,10 +235,31 @@
 
         [redraw][/redraw]
 
+        [message]
+            speaker="Gwiti Ha'atel"
+            message= _ "Farewell, child from Crelanu."
+            scroll=no
+        [/message]
+
         [endlevel]
             result=victory
             bonus=yes
             {NEW_GOLD_CARRYOVER 60}
         [/endlevel]
+    [/event]
+
+    [event]
+        name=moveto
+        [filter]
+            side=1
+            x=22
+            y=18
+        [/filter]
+        [message]
+            speaker=narrator
+            image=scenery/signpost.png
+            message= _ "NE — Dan’Tonk
+SE — Fort Tahn"
+        [/message]
     [/event]
 [/scenario]
