--- a/scenarios/01_A_New_Chance.cfg
+++ b/scenarios/01_A_New_Chance.cfg
@@ -233,7 +233,7 @@
         [/message]
         [message]
             speaker="Arkal-Thil"
-            message= _ "I understood. My brethren shall also join you."
+            message= _ "I understood, master! There are still other brethren hiding. They also shall join you."
         [/message]
         [message]
             speaker=narrator
