--- a/scenarios/14_Ambush.cfg
+++ b/scenarios/14_Ambush.cfg
@@ -173,6 +173,17 @@
     [/event]
 
     [event]
+        name=turn 2
+        [message]
+            speaker="Gwiti Ha'atel"
+            message= _ "It is time to use the power of Morgorath again!"
+        [/message]
+
+        {THUNDER ()}
+        {RISE_UP}
+    [/event]
+
+    [event]
         name=turn 7
         [message]
             speaker="Gwiti Ha'atel"
