--- a/_main.cfg
+++ b/_main.cfg
@@ -16,64 +16,57 @@
 
 #textdomain wesnoth-The_Dark_Hordes
 
-#define CAMPAIGN_THE_DARK_HORDES_MENU_ENTRY_SHAREDINFO ID_SUFFIX NAME_SUFFIX DESCRIPTION
-    id=The_Dark_Hordes_{ID_SUFFIX}
+#define CAMPAIGN_THE_DARK_HORDES_MENU_ENTRY_SHAREDINFO PART_ID_SUFFIX PART_SUBTITLE PART_DESCRIPTION
+    id=The_Dark_Hordes_{PART_ID_SUFFIX}
     define=CAMPAIGN_THE_DARK_HORDES
-    extra_defines=CAMPAIGN_THE_DARK_HORDES_PART_{ID_SUFFIX}
+    extra_defines=CAMPAIGN_THE_DARK_HORDES_PART_{PART_ID_SUFFIX}
 
-    {ENABLE_ANCIENT_LICH}
+    [modify_unit_type]
+        type=Dark Sorcerer
+        remove_advancement=Lich
+    [/modify_unit_type]
     {ENABLE_DEATH_KNIGHT}
 
-#ifdef CAMPAIGN_THE_DARK_HORDES
-    [event]
-        name=prestart
-        [kill]
-            side=1
-            type=Walking Corpse
-            [filter_wml]
-                experience=0
-            [/filter_wml]
-        [/kill]
-    [/event]
-#endif
-
-    version={~add-ons/The_Dark_Hordes/dist/VERSION}
+    version={~add-ons/The_Dark_Hordes/metatags/VERSION}
     abbrev= _ "TDH"
 
-    {CAMPAIGN_DIFFICULTY EASY   "data/add-ons/The_Dark_Hordes/images/units/undead-necromancers/initiate.png~RC(magenta>red)"    ( _ "Apprentice") ( _ "Easy")}
-    {CAMPAIGN_DIFFICULTY NORMAL "data/add-ons/The_Dark_Hordes/images/units/undead-necromancers/deathmaster.png~RC(magenta>red)" ( _ "Master")     ( _ "Normal")} {DEFAULT_DIFFICULTY}
-    {CAMPAIGN_DIFFICULTY HARD   "data/add-ons/The_Dark_Hordes/images/units/undead-necromancers/demilich.png~RC(magenta>red)"    ( _ "Dark Lord")  ( _ "Hard")}
+    {CAMPAIGN_DIFFICULTY BEGINNER "data/add-ons/The_Dark_Hordes/images/units/initiate.png~RC(magenta>red)"    ( _ "Seeker") ( _ "Beginner")}
+    {CAMPAIGN_DIFFICULTY EASY     "data/add-ons/The_Dark_Hordes/images/units/deathmaster.png~RC(magenta>red)" ( _ "Walker") ( _ "Easy")}
+    {CAMPAIGN_DIFFICULTY NORMAL   "data/add-ons/The_Dark_Hordes/images/units/grimreaper.png~RC(magenta>red)"  ( _ "Master") ( _ "Normal")} {DEFAULT_DIFFICULTY}
+    {CAMPAIGN_DIFFICULTY HARD     "data/add-ons/The_Dark_Hordes/images/units/demilich.png~RC(magenta>red)"    ( _ "Reaper") ( _ "Hard")}
+    {CAMPAIGN_DIFFICULTY DEBUG    "data/add-ons/The_Dark_Hordes/images/units/dread-lich.png~RC(magenta>red)"  ( _ "Keeper") ( _ "Debug")}
 
-    name= _ "The Dark Hordes"+{NAME_SUFFIX}
-    description={DESCRIPTION}+"
+    name= _ "The Dark Hordes"+"
+"+{PART_SUBTITLE}
+    description={PART_DESCRIPTION}+"
 
 "+ _ "(Intermediate level, 9 scenarios.)"+"
 <span color='#888' size='smaller'>
-"+ _ "Version"+" {~add-ons/The_Dark_Hordes/dist/VERSION} "+ _ "for Wesnoth 1.18.2 and later"+"
+"+ _ "Version"+" {~add-ons/The_Dark_Hordes/metatags/VERSION} "+ _ "for Wesnoth 1.18.2 and later"+"
 "+ _ "Feedback and bug reports:"+" https://r.wesnoth.org/t58957"+"</span>"
 
     {~add-ons/The_Dark_Hordes/about.cfg}
 #enddef
 
 [campaign]
-    {CAMPAIGN_THE_DARK_HORDES_MENU_ENTRY_SHAREDINFO 1 ( _ " Part 1") ( _ "Lead fugitive necromancer Gwiti Ha’atel to mastery of the undead hordes.")}
+    {CAMPAIGN_THE_DARK_HORDES_MENU_ENTRY_SHAREDINFO 1 ( _ "Part One") ( _ "Lead fugitive necromancer Gwiti Ha’atel to mastery of the undead hordes.")}
 
     first_scenario=01_A_New_Chance
     start_year="1095 YW"
     end_year="1097 YW"
 
     icon="units/undead-spirit/nightgaunt.png~RC(magenta>red)"
-    image="data/add-ons/The_Dark_Hordes/images/portraits/gwiti.png"
+    background="story/landscape-mountains-04.webp"
 [/campaign]
 [campaign]
-    {CAMPAIGN_THE_DARK_HORDES_MENU_ENTRY_SHAREDINFO 2 ( _ " Part 2") ( _ "Lead fugitive necromancer Gwiti Ha’atel to mastery of the undead hordes.")}
+    {CAMPAIGN_THE_DARK_HORDES_MENU_ENTRY_SHAREDINFO 2 ( _ "Part Two") ( _ "Lead fugitive necromancer Gwiti Ha’atel to mastery of the undead hordes.")}
 
     first_scenario=10_Return_to_the_Northlands
     start_year="1099 YW"
     end_year="1100 YW"
 
-    icon="data/add-ons/The_Dark_Hordes/images/units/undead-necromancers/dread-lich.png~RC(magenta>red)"
-    image="data/add-ons/The_Dark_Hordes/images/portraits/tanar.png"
+    icon="units/undead-spirit/nightgaunt-attack-1.png~RC(magenta>red)"
+    background="story/landscape-mountains-03.webp"
 [/campaign]
 
 # wmllint: validate-on
@@ -86,12 +79,44 @@
     path=data/campaigns/The_Rise_Of_Wesnoth
 [/binary_path]
 
-[lua]
-    code = << wesnoth.dofile "~add-ons/The_Dark_Hordes/lua/fade_out_music.lua" >>
-[/lua]
+#define TDH_QUANTITY NAME BEGINNER_VALUE EASY_VALUE NORMAL_VALUE HARD_VALUE
+#ifdef BEGINNER
+    {NAME}={BEGINNER_VALUE}
+#endif
+
+#ifdef EASY
+    {NAME}={EASY_VALUE}
+#endif
+
+#ifdef NORMAL
+    {NAME}={NORMAL_VALUE}
+#endif
+
+#ifdef HARD
+    {NAME}={HARD_VALUE}
+#endif
+
+#ifdef DEBUG
+    {NAME}={NORMAL_VALUE}
+#endif
+#enddef
+
+#define TDH_TURNS BEGINNER_AMOUNT EASY_AMOUNT NORMAL_AMOUNT HARD_AMOUNT
+    {TDH_QUANTITY turns {BEGINNER_AMOUNT} {EASY_AMOUNT} {NORMAL_AMOUNT} {HARD_AMOUNT}}
+#enddef
+
+#define TDH_GOLD BEGINNER_AMOUNT EASY_AMOUNT NORMAL_AMOUNT HARD_AMOUNT
+    {TDH_QUANTITY gold {BEGINNER_AMOUNT} {EASY_AMOUNT} {NORMAL_AMOUNT} {HARD_AMOUNT}}
+#enddef
+
+#define TDH_INCOME BEGINNER_AMOUNT EASY_AMOUNT NORMAL_AMOUNT HARD_AMOUNT
+    {TDH_QUANTITY income {BEGINNER_AMOUNT} {EASY_AMOUNT} {NORMAL_AMOUNT} {HARD_AMOUNT}}
+#enddef
 
 {~add-ons/The_Dark_Hordes/mainline-strings.cfg}
 {~add-ons/The_Dark_Hordes/macros}
+
+{campaigns/Under_the_Burning_Suns/utils/abilities.cfg}
 
 [+units]
     {~add-ons/The_Dark_Hordes/units}
@@ -102,4 +127,5 @@
 {~add-ons/The_Dark_Hordes/scenarios}
 #endif
 
-# wmllint: directory spellings Gwiti Morgorath Tanar
+# wmllint: directory spellings Gwiti Nati Morgorath Tanar
+# wmllint: directory spellings Aretu Kaleon Erzen
