--- a/about.cfg
+++ b/about.cfg
@@ -30,7 +30,7 @@
 [about]
     title= _ "Graphics"
     [entry]
-        name="Iris Morelle (Irydacea/shadowm)"
+        name="James Woo (Pickslide)"
     [/entry]
     [entry]
         name="KameRamen"
