--- a/units/Initiate.cfg
+++ b/units/Initiate.cfg
@@ -4,9 +4,10 @@
     id=Initiate
     name= _ "Initiate"
     race=human
-    image=units/undead-necromancers/initiate.png
-    profile=portraits/gwiti.png
-    hitpoints=32
+    image=units/initiate.png
+    halo=halo/elven/nature-halo[7~1].png~CS(-159,-255,-159)~O(0.5):250
+    profile=portraits/gwiti.webp
+    hitpoints=30
     movement_type=smallfoot
     movement=6
     experience=38
@@ -15,8 +16,8 @@
     advances_to=Deathmaster
     cost=20
     usage=archer
-    description= _ "Dabbling in the Death Magic, this young Ha’atel’s lust for power has weakened him to the point where he is too weak to attack in regular combat."
-    {DEFENSE_ANIM units/undead-necromancers/initiate-defend-2.png units/undead-necromancers/initiate-defend-1.png {SOUND_LIST:HUMAN_HIT}}
+    description= _ "This young Ha’atel is so steeped in the death magic that he cannot even raise his fists to fight. Instead, he is allowing his dark talents to blossom from within him. What is frightening is that he is so loyal to his desire for more power that he knows no bounds."
+    {DEFENSE_ANIM units/initiate-defend-2.png units/initiate-defend-1.png {SOUND_LIST:HUMAN_HIT}}
     die_sound={SOUND_LIST:HUMAN_DIE}
     [attack]
         name=chill wave
@@ -55,55 +56,55 @@
         [frame]
             begin=-450
             end=-420
-            image="units/undead-necromancers/initiate.png"
+            image="units/initiate.png"
         [/frame]
         [frame]
             begin=-420
             end=-395
-            image="units/undead-necromancers/initiate-magic-1.png"
+            image="units/initiate-magic-1.png"
         [/frame]
         [frame]
             begin=-395
             end=-320
-            image="units/undead-necromancers/initiate-magic-2.png"
+            image="units/initiate-magic-2.png"
         [/frame]
         [frame]
             begin=-320
             end=-300
-            image="units/undead-necromancers/initiate-magic-3.png"
+            image="units/initiate-magic-3.png"
         [/frame]
         [frame]
             begin=-300
             end=-250
-            image="units/undead-necromancers/initiate-magic-3.png"
+            image="units/initiate-magic-3.png"
             halo=halo/undead/dark-magic-1.png
             halo_x,halo_y=0,-12
         [/frame]
         [frame]
             begin=-250
             end=-200
-            image="units/undead-necromancers/initiate-magic-3.png"
+            image="units/initiate-magic-3.png"
             halo=halo/undead/dark-magic-2.png
             halo_x,halo_y=0,-12
         [/frame]
         [frame]
             begin=-200
             end=-150
-            image="units/undead-necromancers/initiate-magic-3.png"
+            image="units/initiate-magic-3.png"
             halo=halo/undead/dark-magic-3.png
             halo_x,halo_y=0,-12
         [/frame]
         [frame]
             begin=-150
             end=-100
-            image="units/undead-necromancers/initiate-magic-3.png"
+            image="units/initiate-magic-3.png"
             halo=halo/undead/dark-magic-4.png
             halo_x,halo_y=0,-12
         [/frame]
         [frame]
             begin=-100
             end=-50
-            image="units/undead-necromancers/initiate-magic-3.png"
+            image="units/initiate-magic-3.png"
             halo=halo/undead/dark-magic-5.png
             halo_x,halo_y=0,-12
         [/frame]
@@ -112,7 +113,7 @@
             [frame]
                 begin=-50
                 end=0
-                image="units/undead-necromancers/initiate-magic-3.png"
+                image="units/initiate-magic-3.png"
                 halo=halo/undead/dark-magic-6.png
                 halo_x,halo_y=0,-12
                 sound=magic-dark-miss.ogg
@@ -123,7 +124,7 @@
             [frame]
                 begin=-50
                 end=0
-                image="units/undead-necromancers/initiate-magic-3.png"
+                image="units/initiate-magic-3.png"
                 halo=halo/undead/dark-magic-6.png
                 halo_x,halo_y=0,-12
                 sound=magic-dark.ogg
@@ -132,17 +133,17 @@
         [frame]
             begin=0
             end=50
-            image="units/undead-necromancers/initiate-magic-2.png"
+            image="units/initiate-magic-2.png"
         [/frame]
         [frame]
             begin=50
             end=90
-            image="units/undead-necromancers/initiate-magic-1.png"
+            image="units/initiate-magic-1.png"
         [/frame]
         [frame]
             begin=90
             end=100
-            image="units/undead-necromancers/initiate.png"
+            image="units/initiate.png"
         [/frame]
     [/attack_anim]
     [recruiting_anim]
@@ -152,62 +153,62 @@
         [frame]
             begin=-450
             end=-420
-            image="units/undead-necromancers/initiate.png"
+            image="units/initiate.png"
         [/frame]
         [frame]
             begin=-420
             end=-395
-            image="units/undead-necromancers/initiate-magic-1.png"
+            image="units/initiate-magic-1.png"
         [/frame]
         [frame]
             begin=-395
             end=-320
-            image="units/undead-necromancers/initiate-magic-2.png"
+            image="units/initiate-magic-2.png"
         [/frame]
         [frame]
             begin=-320
             end=-300
-            image="units/undead-necromancers/initiate-magic-3.png"
+            image="units/initiate-magic-3.png"
         [/frame]
         [frame]
             begin=-300
             end=-250
-            image="units/undead-necromancers/initiate-magic-3.png"
+            image="units/initiate-magic-3.png"
             halo=halo/undead/dark-magic-1.png
             halo_x,halo_y=0,-12
         [/frame]
         [frame]
             begin=-250
             end=-200
-            image="units/undead-necromancers/initiate-magic-3.png"
+            image="units/initiate-magic-3.png"
             halo=halo/undead/dark-magic-2.png
             halo_x,halo_y=0,-12
         [/frame]
         [frame]
             begin=-200
             end=-150
-            image="units/undead-necromancers/initiate-magic-3.png"
+            image="units/initiate-magic-3.png"
             halo=halo/undead/dark-magic-3.png
             halo_x,halo_y=0,-12
         [/frame]
         [frame]
             begin=-150
             end=-100
-            image="units/undead-necromancers/initiate-magic-3.png"
+            image="units/initiate-magic-3.png"
             halo=halo/undead/dark-magic-4.png
             halo_x,halo_y=0,-12
         [/frame]
         [frame]
             begin=-100
             end=-50
-            image="units/undead-necromancers/initiate-magic-3.png"
+            image="units/initiate-magic-3.png"
             halo=halo/undead/dark-magic-5.png
             halo_x,halo_y=0,-12
         [/frame]
         [frame]
             begin=-50
             end=0
-            image="units/undead-necromancers/initiate-magic-3.png"
+            image="units/initiate-magic-3.png"
             halo=halo/undead/dark-magic-6.png
             halo_x,halo_y=0,-12
             sound=magic-dark.ogg
@@ -215,17 +216,17 @@
         [frame]
             begin=0
             end=50
-            image="units/undead-necromancers/initiate-magic-2.png"
+            image="units/initiate-magic-2.png"
         [/frame]
         [frame]
             begin=50
             end=90
-            image="units/undead-necromancers/initiate-magic-1.png"
+            image="units/initiate-magic-1.png"
         [/frame]
         [frame]
             begin=90
             end=100
-            image="units/undead-necromancers/initiate.png"
+            image="units/initiate.png"
         [/frame]
     [/recruiting_anim]
 [/unit_type]
