--- a/units/Deathmaster.cfg
+++ b/units/Deathmaster.cfg
@@ -4,20 +4,20 @@
     id=Deathmaster
     name= _ "Deathmaster"
     race=human
-    image=units/undead-necromancers/deathmaster.png
+    image=units/deathmaster.png
     halo=halo/darkens-aura.png~SCALE(150,150)
-    profile=portraits/gwiti.png
+    profile=portraits/gwiti.webp
     hitpoints=50
     movement_type=smallfoot
     movement=6
     experience=96
     level=2
     alignment=chaotic
-    advances_to=Demilich
+    advances_to=Grimreaper
     cost=36
     usage=mixed fighter
-    description= _ "His wanderings on a dark path have given him power normally not granted to mortals, but with a terrible cost: the undead that he gave his soul to are gradually claiming his mortal shell too, and with time, he will be a true undead and a terror to all that lives."
-    {DEFENSE_ANIM units/undead-necromancers/deathmaster-defend.png units/undead-necromancers/deathmaster.png {SOUND_LIST:HUMAN_HIT}}
+    description= _ "By wandering the paths of darkness, Ha’atel gained powers not normally granted to mortals, but at an awful price: the undead to whom he has devoted his soul are gradually taking possession of his mortal shell as well, and in time he will become the true undead, the terror to all that live."
+    {DEFENSE_ANIM units/deathmaster-defend.png units/deathmaster.png {SOUND_LIST:HUMAN_HIT}}
     die_sound={SOUND_LIST:HUMAN_DIE}
     [attack]
         name=staff
@@ -65,17 +65,17 @@
         [frame]
             begin=-300
             end=-225
-            image="units/undead-necromancers/deathmaster-magic-1.png"
+            image="units/deathmaster-magic-1.png"
         [/frame]
         [frame]
             begin=-225
             end=-150
-            image="units/undead-necromancers/deathmaster-magic-2.png"
+            image="units/deathmaster-magic-2.png"
         [/frame]
         [frame]
             begin=-150
             end=-75
-            image="units/undead-necromancers/deathmaster-magic-3.png"
+            image="units/deathmaster-magic-3.png"
             halo=halo/undead/black-magic-1.png
         [/frame]
         [if]
@@ -83,7 +83,7 @@
             [frame]
                 begin=-75
                 end=0
-                image="units/undead-necromancers/deathmaster-magic-3.png"
+                image="units/deathmaster-magic-3.png"
                 sound="magic-dark.ogg"
                 halo=halo/undead/black-magic-2.png
             [/frame]
@@ -93,7 +93,7 @@
             [frame]
                 begin=-75
                 end=0
-                image="units/undead-necromancers/deathmaster-magic-3.png"
+                image="units/deathmaster-magic-3.png"
                 sound="magic-dark-miss.ogg"
                 halo=halo/undead/black-magic-2.png
             [/frame]
@@ -101,30 +101,30 @@
         [frame]
             begin=0
             end=75
-            image="units/undead-necromancers/deathmaster-magic-3.png"
+            image="units/deathmaster-magic-3.png"
             halo=halo/undead/black-magic-3.png
         [/frame]
         [frame]
             begin=75
             end=150
-            image="units/undead-necromancers/deathmaster-magic-3.png"
+            image="units/deathmaster-magic-3.png"
             halo=halo/undead/black-magic-4.png
         [/frame]
         [frame]
             begin=150
             end=200
-            image="units/undead-necromancers/deathmaster-magic-3.png"
+            image="units/deathmaster-magic-3.png"
             halo=halo/undead/black-magic-5.png
         [/frame]
         [frame]
             begin=200
             end=250
-            image="units/undead-necromancers/deathmaster-magic-2.png"
+            image="units/deathmaster-magic-2.png"
         [/frame]
         [frame]
             begin=250
             end=300
-            image="units/undead-necromancers/deathmaster-magic-1.png"
+            image="units/deathmaster-magic-1.png"
         [/frame]
     [/attack_anim]
     [attack_anim]
@@ -134,19 +134,19 @@
         [frame]
             begin=-250
             end=-200
-            image="units/undead-necromancers/deathmaster.png"
+            image="units/deathmaster.png"
         [/frame]
         [frame]
             begin=-200
             end=-100
-            image="units/undead-necromancers/deathmaster-attack-staff-1.png"
+            image="units/deathmaster-attack-staff-1.png"
         [/frame]
         [if]
             hits=yes
             [frame]
                 begin=-100
                 end=100
-                image="units/undead-necromancers/deathmaster-attack-staff-2.png"
+                image="units/deathmaster-attack-staff-2.png"
                 sound=staff.ogg
             [/frame]
         [/if]
@@ -155,14 +155,14 @@
             [frame]
                 begin=-100
                 end=100
-                image="units/undead-necromancers/deathmaster-attack-staff-2.png"
+                image="units/deathmaster-attack-staff-2.png"
                 sound=staff-miss.ogg
             [/frame]
         [/else]
         [frame]
             begin=100
             end=200
-            image="units/undead-necromancers/deathmaster.png"
+            image="units/deathmaster.png"
         [/frame]
     [/attack_anim]
     [recruiting_anim]
@@ -172,57 +172,57 @@
         [frame]
             begin=-300
             end=-225
-            image="units/undead-necromancers/deathmaster-magic-1.png"
+            image="units/deathmaster-magic-1.png"
         [/frame]
         [frame]
             begin=-225
             end=-150
-            image="units/undead-necromancers/deathmaster-magic-2.png"
+            image="units/deathmaster-magic-2.png"
         [/frame]
         [frame]
             begin=-150
             end=-75
-            image="units/undead-necromancers/deathmaster-magic-3.png"
+            image="units/deathmaster-magic-3.png"
             halo=halo/undead/black-magic-1.png
         [/frame]
         [frame]
             begin=-75
             end=0
-            image="units/undead-necromancers/deathmaster-magic-3.png"
+            image="units/deathmaster-magic-3.png"
             sound="magic-dark.ogg"
             halo=halo/undead/black-magic-2.png
         [/frame]
         [frame]
             begin=0
             end=75
-            image="units/undead-necromancers/deathmaster-magic-3.png"
+            image="units/deathmaster-magic-3.png"
             halo=halo/undead/black-magic-3.png
         [/frame]
         [frame]
             begin=75
             end=150
-            image="units/undead-necromancers/deathmaster-magic-3.png"
+            image="units/deathmaster-magic-3.png"
             halo=halo/undead/black-magic-4.png
         [/frame]
         [frame]
             begin=150
             end=200
-            image="units/undead-necromancers/deathmaster-magic-3.png"
+            image="units/deathmaster-magic-3.png"
             halo=halo/undead/black-magic-5.png
         [/frame]
         [frame]
             begin=200
             end=250
-            image="units/undead-necromancers/deathmaster-magic-2.png"
+            image="units/deathmaster-magic-2.png"
         [/frame]
         [frame]
             begin=250
             end=300
-            image="units/undead-necromancers/deathmaster-magic-1.png"
+            image="units/deathmaster-magic-1.png"
         [/frame]
         [frame]
             duration=1
-            image="units/undead-necromancers/deathmaster.png"
+            image="units/deathmaster.png"
         [/frame]
     [/recruiting_anim]
 [/unit_type]
