--- a/units/Demilich.cfg
+++ b/units/Demilich.cfg
@@ -4,10 +4,10 @@
     id=Demilich
     name= _ "Demilich"
     race=undead
-    image=units/undead-necromancers/demilich.png
+    image=units/demilich.png
     halo=halo/darkens-aura.png~SCALE(150,150)
-    profile=portraits/gwiti-demilich.png
-    hitpoints=74
+    profile=portraits/gwiti-demilich.webp
+    hitpoints=70
     movement_type=undeadfoot
     movement=6
     [movement_costs]
@@ -22,8 +22,8 @@
     advances_to=Dread Lich
     cost=60
     usage=fighter
-    description= _ "After too much time dabbling with forbidden magics and dark arts, these magi have begun to pay a heavy price. Demiliches have started losing their bodies, becoming undead themselves. With time, they may become fully undead, and feared by all alike."
-    {DEFENSE_ANIM units/undead-necromancers/demilich-defend.png units/undead-necromancers/demilich.png {SOUND_LIST:LICH_HIT}}
+    description= _ "Ha’atel gradually came to exist on the threshold between life and death. While his body grows colder and colder, his mightiness is reaching new heights. With each ritual he performs, the boundary between him and his servants blurs. And those who witness his passing can only speak of an unnatural existence that pulses with its own heartbeat."
+    {DEFENSE_ANIM units/demilich-defend.png units/demilich.png {SOUND_LIST:LICH_HIT}}
     die_sound=lich-die.ogg
     [attack]
         name=touch
@@ -74,17 +74,17 @@
         [frame]
             begin=-300
             end=-225
-            image="units/undead-necromancers/demilich-magic-1.png"
+            image="units/demilich-magic-1.png"
         [/frame]
         [frame]
             begin=-225
             end=-150
-            image="units/undead-necromancers/demilich-magic-2.png"
+            image="units/demilich-magic-2.png"
         [/frame]
         [frame]
             begin=-150
             end=-75
-            image="units/undead-necromancers/demilich-magic-3.png"
+            image="units/demilich-magic-3.png"
             halo=halo/undead/black-magic-1.png
         [/frame]
         [if]
@@ -92,7 +92,7 @@
             [frame]
                 begin=-75
                 end=0
-                image="units/undead-necromancers/demilich-magic-3.png"
+                image="units/demilich-magic-3.png"
                 sound=magic-dark-big.ogg
                 halo=halo/undead/black-magic-2.png
             [/frame]
@@ -102,7 +102,7 @@
             [frame]
                 begin=-75
                 end=0
-                image="units/undead-necromancers/demilich-magic-3.png"
+                image="units/demilich-magic-3.png"
                 sound=magic-dark-big-miss.ogg
                 halo=halo/undead/black-magic-2.png
             [/frame]
@@ -110,30 +110,30 @@
         [frame]
             begin=0
             end=75
-            image="units/undead-necromancers/demilich-magic-3.png"
+            image="units/demilich-magic-3.png"
             halo=halo/undead/black-magic-3.png
         [/frame]
         [frame]
             begin=75
             end=150
-            image="units/undead-necromancers/demilich-magic-3.png"
+            image="units/demilich-magic-3.png"
             halo=halo/undead/black-magic-4.png
         [/frame]
         [frame]
             begin=150
             end=200
-            image="units/undead-necromancers/demilich-magic-3.png"
+            image="units/demilich-magic-3.png"
             halo=halo/undead/black-magic-5.png
         [/frame]
         [frame]
             begin=200
             end=250
-            image="units/undead-necromancers/demilich-magic-2.png"
+            image="units/demilich-magic-2.png"
         [/frame]
         [frame]
             begin=250
             end=300
-            image="units/undead-necromancers/demilich-magic-1.png"
+            image="units/demilich-magic-1.png"
         [/frame]
     [/attack_anim]
     [attack_anim]
@@ -143,19 +143,19 @@
         [frame]
             begin=-250
             end=-200
-            image="units/undead-necromancers/demilich.png"
+            image="units/demilich.png"
         [/frame]
         [frame]
             begin=-200
             end=-100
-            image="units/undead-necromancers/demilich-melee-1.png"
+            image="units/demilich-melee-1.png"
         [/frame]
         [if]
             hits=yes
             [frame]
                 begin=-100
                 end=100
-                image="units/undead-necromancers/demilich-melee-2.png"
+                image="units/demilich-melee-2.png"
                 sound=wail-sml.wav
             [/frame]
         [/if]
@@ -164,19 +164,19 @@
             [frame]
                 begin=-100
                 end=100
-                image="units/undead-necromancers/demilich-melee-2.png"
+                image="units/demilich-melee-2.png"
                 sound={SOUND_LIST:MISS}
             [/frame]
         [/else]
         [frame]
             begin=100
             end=175
-            image="units/undead-necromancers/demilich-magic-1.png"
+            image="units/demilich-magic-1.png"
         [/frame]
         [frame]
             begin=175
             end=250
-            image="units/undead-necromancers/demilich.png"
+            image="units/demilich.png"
         [/frame]
     [/attack_anim]
     [recruiting_anim]
@@ -186,57 +186,57 @@
         [frame]
             begin=-300
             end=-225
-            image="units/undead-necromancers/demilich-magic-1.png"
+            image="units/demilich-magic-1.png"
         [/frame]
         [frame]
             begin=-225
             end=-150
-            image="units/undead-necromancers/demilich-magic-2.png"
+            image="units/demilich-magic-2.png"
         [/frame]
         [frame]
             begin=-150
             end=-75
-            image="units/undead-necromancers/demilich-magic-3.png"
+            image="units/demilich-magic-3.png"
             halo=halo/undead/black-magic-1.png
         [/frame]
         [frame]
             begin=-75
             end=0
-            image="units/undead-necromancers/demilich-magic-3.png"
+            image="units/demilich-magic-3.png"
             sound=magic-dark-big.ogg
             halo=halo/undead/black-magic-2.png
         [/frame]
         [frame]
             begin=0
             end=75
-            image="units/undead-necromancers/demilich-magic-3.png"
+            image="units/demilich-magic-3.png"
             halo=halo/undead/black-magic-3.png
         [/frame]
         [frame]
             begin=75
             end=150
-            image="units/undead-necromancers/demilich-magic-3.png"
+            image="units/demilich-magic-3.png"
             halo=halo/undead/black-magic-4.png
         [/frame]
         [frame]
             begin=150
             end=200
-            image="units/undead-necromancers/demilich-magic-3.png"
+            image="units/demilich-magic-3.png"
             halo=halo/undead/black-magic-5.png
         [/frame]
         [frame]
             begin=200
             end=250
-            image="units/undead-necromancers/demilich-magic-2.png"
+            image="units/demilich-magic-2.png"
         [/frame]
         [frame]
             begin=250
             end=300
-            image="units/undead-necromancers/demilich-magic-1.png"
+            image="units/demilich-magic-1.png"
         [/frame]
         [frame]
             duration=1
-            image="units/undead-necromancers/demilich.png"
+            image="units/demilich.png"
         [/frame]
     [/recruiting_anim]
 [/unit_type]
