--- a/units/Dread_Lich.cfg
+++ b/units/Dread_Lich.cfg
@@ -4,9 +4,9 @@
     id=Dread Lich
     name= _ "Dread Lich"
     race=undead
-    image=units/undead-necromancers/dread-lich.png
+    image=units/dread-lich.png
     halo=halo/darkens-aura.png~SCALE(150,150)
-    profile=portraits/gwiti-lich.png
+    profile=portraits/gwiti-lich.webp
     hitpoints=96
     movement_type=undeadfoot
     movement=6
@@ -23,8 +23,8 @@
     {AMLA_DEFAULT}
     cost=110
     usage=mixed fighter
-    description= _ "At long last, Ha’atel has paid the ultimate sacrifice for the dark arts into which he has delved, and has, himself, entered into undeath. At the apex of his power, he has become a lich, a waking embodiment of dread. He has, beyond any doubt, passed the point of no return, and his power and immortality will have to provide consolation for what he has lost in his quest to achieve them."
-    {DEFENSE_ANIM units/undead-necromancers/dread-lich-defend.png units/undead-necromancers/dread-lich.png {SOUND_LIST:LICH_HIT}}
+    description= _ "At the end of his long journey, Ha’atel made the ultimate sacrifice for the darkness with which he was deeply involved, and he himself entered the world of immortality. At the pinnacle of his power, he became the lich, the awakened embodiment of fear. He had undoubtedly passed the point of no return. His power and immortality would have to be comforting for what he had lost in his quest to achieve it."
+    {DEFENSE_ANIM units/dread-lich-defend.png units/dread-lich.png {SOUND_LIST:LICH_HIT}}
     die_sound=lich-die.ogg
     [attack]
         name=touch
@@ -75,17 +75,17 @@
         [frame]
             begin=-300
             end=-225
-            image="units/undead-necromancers/dread-lich-magic-1.png"
+            image="units/dread-lich-magic-1.png"
         [/frame]
         [frame]
             begin=-225
             end=-150
-            image="units/undead-necromancers/dread-lich-magic-2.png"
+            image="units/dread-lich-magic-2.png"
         [/frame]
         [frame]
             begin=-150
             end=-75
-            image="units/undead-necromancers/dread-lich-magic-3.png"
+            image="units/dread-lich-magic-3.png"
             halo=halo/undead/black-magic-1.png
         [/frame]
         [if]
@@ -93,7 +93,7 @@
             [frame]
                 begin=-75
                 end=0
-                image="units/undead-necromancers/dread-lich-magic-3.png"
+                image="units/dread-lich-magic-3.png"
                 sound=magic-dark-big.ogg
                 halo=halo/undead/black-magic-2.png
             [/frame]
@@ -103,7 +103,7 @@
             [frame]
                 begin=-75
                 end=0
-                image="units/undead-necromancers/dread-lich-magic-3.png"
+                image="units/dread-lich-magic-3.png"
                 sound=magic-dark-big-miss.ogg
                 halo=halo/undead/black-magic-2.png
             [/frame]
@@ -111,30 +111,30 @@
         [frame]
             begin=0
             end=75
-            image="units/undead-necromancers/dread-lich-magic-3.png"
+            image="units/dread-lich-magic-3.png"
             halo=halo/undead/black-magic-3.png
         [/frame]
         [frame]
             begin=75
             end=150
-            image="units/undead-necromancers/dread-lich-magic-3.png"
+            image="units/dread-lich-magic-3.png"
             halo=halo/undead/black-magic-4.png
         [/frame]
         [frame]
             begin=150
             end=200
-            image="units/undead-necromancers/dread-lich-magic-3.png"
+            image="units/dread-lich-magic-3.png"
             halo=halo/undead/black-magic-5.png
         [/frame]
         [frame]
             begin=200
             end=250
-            image="units/undead-necromancers/dread-lich-magic-2.png"
+            image="units/dread-lich-magic-2.png"
         [/frame]
         [frame]
             begin=250
             end=300
-            image="units/undead-necromancers/dread-lich-magic-1.png"
+            image="units/dread-lich-magic-1.png"
         [/frame]
     [/attack_anim]
     [attack_anim]
@@ -144,19 +144,19 @@
         [frame]
             begin=-250
             end=-200
-            image="units/undead-necromancers/dread-lich.png"
+            image="units/dread-lich.png"
         [/frame]
         [frame]
             begin=-200
             end=-100
-            image="units/undead-necromancers/dread-lich-melee-1.png"
+            image="units/dread-lich-melee-1.png"
         [/frame]
         [if]
             hits=yes
             [frame]
                 begin=-100
                 end=100
-                image="units/undead-necromancers/dread-lich-melee-2.png"
+                image="units/dread-lich-melee-2.png"
                 sound=wail-sml.wav
             [/frame]
         [/if]
@@ -165,19 +165,19 @@
             [frame]
                 begin=-100
                 end=100
-                image="units/undead-necromancers/dread-lich-melee-2.png"
+                image="units/dread-lich-melee-2.png"
                 sound={SOUND_LIST:MISS}
             [/frame]
         [/else]
         [frame]
             begin=100
             end=175
-            image="units/undead-necromancers/dread-lich-magic-1.png"
+            image="units/dread-lich-magic-1.png"
         [/frame]
         [frame]
             begin=175
             end=250
-            image="units/undead-necromancers/dread-lich.png"
+            image="units/dread-lich.png"
         [/frame]
     [/attack_anim]
     [recruiting_anim]
@@ -187,57 +187,57 @@
         [frame]
             begin=-300
             end=-225
-            image="units/undead-necromancers/dread-lich-magic-1.png"
+            image="units/dread-lich-magic-1.png"
         [/frame]
         [frame]
             begin=-225
             end=-150
-            image="units/undead-necromancers/dread-lich-magic-2.png"
+            image="units/dread-lich-magic-2.png"
         [/frame]
         [frame]
             begin=-150
             end=-75
-            image="units/undead-necromancers/dread-lich-magic-3.png"
+            image="units/dread-lich-magic-3.png"
             halo=halo/undead/black-magic-1.png
         [/frame]
         [frame]
             begin=-75
             end=0
-            image="units/undead-necromancers/dread-lich-magic-3.png"
+            image="units/dread-lich-magic-3.png"
             sound=magic-dark-big.ogg
             halo=halo/undead/black-magic-2.png
         [/frame]
         [frame]
             begin=0
             end=75
-            image="units/undead-necromancers/dread-lich-magic-3.png"
+            image="units/dread-lich-magic-3.png"
             halo=halo/undead/black-magic-3.png
         [/frame]
         [frame]
             begin=75
             end=150
-            image="units/undead-necromancers/dread-lich-magic-3.png"
+            image="units/dread-lich-magic-3.png"
             halo=halo/undead/black-magic-4.png
         [/frame]
         [frame]
             begin=150
             end=200
-            image="units/undead-necromancers/dread-lich-magic-3.png"
+            image="units/dread-lich-magic-3.png"
             halo=halo/undead/black-magic-5.png
         [/frame]
         [frame]
             begin=200
             end=250
-            image="units/undead-necromancers/dread-lich-magic-2.png"
+            image="units/dread-lich-magic-2.png"
         [/frame]
         [frame]
             begin=250
             end=300
-            image="units/undead-necromancers/dread-lich-magic-1.png"
+            image="units/dread-lich-magic-1.png"
         [/frame]
         [frame]
             duration=1
-            image="units/undead-necromancers/dread-lich.png"
+            image="units/dread-lich.png"
         [/frame]
     [/recruiting_anim]
 [/unit_type]
