--- a/macros/items.cfg
+++ b/macros/items.cfg
@@ -23,28 +23,24 @@
                 [/filter_wml]
             [/not]
         [/filter]
-
         [object]
             id={ID}
             name= _ "Ice Potion"
             image=items/potion-blue.png
             duration=forever
-            description= _ "This potion contains a strange fluid designed to imbue a weapon with the power of cold."
-            cannot_use_message= _ "Only a skeletal warrior may acquire this dreaded power!"
-
+            description= _ "This potion contains some strange fluid designed to imbue the weapon with the power of cold."
+            cannot_use_message= _ "Only skeletal warriors may acquire this dreaded power!"
             [filter]
                 type=Skeleton,Deathblade,Revenant,Draug
                 x={X}
                 y={Y}
             [/filter]
-
             [then]
                 [remove_item]
                     x={X}
                     y={Y}
                 [/remove_item]
             [/then]
-
             [effect]
                 apply_to=attack
                 range=melee
@@ -55,16 +51,18 @@
     [/event]
 #enddef
 
-#define CHEST_OF_GOLD X Y MSG_CODE AMOUNT
+#define TREASURE_CHEST X Y MSG_CODE GOLD_AMOUNT
     [item]
-        x,y={X},{Y}
         image=items/chest-plain-closed.png
+        x={X}
+        y={Y}
     [/item]
 
     [event]
         name=moveto
         [filter]
-            x,y={X},{Y}
+            x={X}
+            y={Y}
             side=1
         [/filter]
 
@@ -88,6 +86,30 @@
             message={MSG_CODE}
         [/message]
 
-        {RETRIEVE_GOLD {AMOUNT}}
+        [gold]
+            side=1
+            amount={GOLD_AMOUNT}
+        [/gold]
+
+        {VARIABLE gold_amount ({GOLD_AMOUNT})}
+
+        [if]
+            [variable]
+                name=gold_amount
+                numerical_not_equals=0
+            [/variable]
+            [then]
+                [sound]
+                    name=gold.ogg
+                [/sound]
+                [floating_text]
+                    x={X}
+                    y={Y}
+                    text= _ "+$gold_amount| gold"
+                [/floating_text]
+            [/then]
+        [/if]
+
+        {CLEAR_VARIABLE gold_amount}
     [/event]
 #enddef
